--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
