--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "use-firebase-auth": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
