--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "es7": "^1.0.8-beta.4",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "react-router-dom": "^5.2.0"
