--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "chart.js": "^2.9.3",
+    "node": "^14.8.0",
     "react": "^16.6.3",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.6.3",
