--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "financialfreedom",
   "version": "1.0.0",
-  "description": "basic API app ##Dependecnies - Chart.js - Dotenv",
-  "main": "api.js",
+  "description": "basic API app ##Dependencies - Chart.js - Dotenv",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
@@ -28,14 +27,9 @@
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
     "compression": "^1.7.4",
-    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "es7": "^1.0.8-beta.4",
     "express": "^4.16.3",
-    "express-session": "^1.17.1",
-    "if-env": "^1.0.4",
-    "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1",
     "node": "^14.8.0"
