--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "basic API app ##Dependecnies - Chart.js - Dotenv",
   "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start": "node server",
+    "server": "nodemon server",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/RogerLamotheJR/financialFreedom.git"
   },
-  "author": "",
+  "author": "roger lamothe",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/RogerLamotheJR/financialFreedom/issues"
@@ -27,20 +27,21 @@
   "dependencies": {
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
+    "colors": "^1.4.0",
     "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "es7": "^1.0.8-beta.4",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "lite-server": "^2.5.3",
-    "mongoose": "^5.5.15",
-    "morgan": "^1.9.1",
+    "mongoose": "^5.10.2",
+    "morgan": "^1.10.0",
     "node": "^14.8.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.4"
   }
 }
