--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.1",
+    "unirest": "^0.6.0",
     "use-firebase-auth": "^2.1.0"
   },
   "scripts": {
