--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lite-server": "^2.5.3",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
-    "node": "^14.8.0"
+    "node": "^14.8.0",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
