--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "moment": "^2.27.0",
     "mongoose": "^5.10.3",
     "morgan": "^1.10.0",
-    "node": "^14.8.0"
+    "node": "^14.8.0",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
