--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^16.6.3",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.6.3",
+    "react-hook-form": "^6.8.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.1",
     "use-firebase-auth": "^2.1.0"
