--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "chart.js": "^2.9.3",
+    "moment": "^2.27.0",
     "node": "^14.8.0",
     "react": "^16.6.3",
     "react-apexcharts": "^1.3.7",
