--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.20.0",
     "chart.js": "^2.9.3",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "moment": "^2.27.0",
     "node": "^14.8.0",
     "react": "^16.6.3",
